--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <!-- Start screen -->
-      <section id="start-screen" class="screen">
+      <section id="start-screen" class="screen active">
         <h1 class="title">Quiz Time!</h1>
         <p class="desc">Test your knowledge with these fun questions</p>
         <button id="start-btn" class="btn">Start Quiz</button>
@@ -23,25 +23,20 @@
           <div class="quiz-info">
             <p class="desc">
               Question <span id="current-question"></span> of
-              <span class="total-questions"></span>
+              <span id="total-questions"></span>
             </p>
             <p class="desc">Score: <span id="score"></span></p>
           </div>
         </div>
         <!-- Answers -->
-        <div class="answers-container">
-          <button class="answer-btn correct">Bruh</button>
-          <button class="answer-btn incorrect">Bruh</button>
-          <button class="answer-btn">Bruh</button>
-          <button class="answer-btn">Bruh</button>
-        </div>
+        <div id="answers-container" class="answers-container"></div>
         <!-- Progress -->
         <div class="progress-bar">
           <div id="progress" class="progress"></div>
         </div>
       </section>
       <!-- Result screen -->
-      <section id="result-screen" class="screen active">
+      <section id="result-screen" class="screen">
         <h1 class="title">Quiz Results</h1>
         <div class="result-info">
           <p class="desc">
